# BookstoreAPI

./: .env.sample  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: pylint.yml  test.yml
alembic/: env.py
alembic/versions/: 218432b25bb3_add_roles_table.py  2c08fb8031fe_update_password_hash_column.py  311170d4e492_add_book_category.py  7d7c04067c4f_add_role_id_to_user_nullable.py  810d7a921106_initial_database_setup.py  9872adabdb87_add_role_id_to_user_not_nullable.py  cd6dea3b0e2a_update_password_hash_column.py  d90583282c40_one_to_one_relationship_for_user_.py  dcc23d1fc7da_author_name_unique.py  ef7a6b3b9a11_book_category_id_field_as_nullable.py  fea2b51666e6_update_password_hash_column.py
bookstore_api/app/: __init__.py  config.py  extensions.py
bookstore_api/app/helpers/: __init__.py  api_helpers.py  api_response.py  auth.py  auth_helper.py  enum_types.py  errors.py  revoke_jwt_token.py  role_required.py  s3_utils.py
bookstore_api/app/models/: __init__.py  author.py  book.py  book_category.py  mixins.py  review.py  role.py  user.py
bookstore_api/app/routes/: __init__.py
bookstore_api/app/routes/auth/: views.py
bookstore_api/app/routes/resources/: __init__.py  authors.py  book_categories.py  books.py  reviews.py  (+1 more)
bookstore_api/app/schemas/: __init__.py  author_schema.py  book_category_schema.py  book_schema.py  books_schema.py  review_schema.py  role_schema.py  user_schema.py
bookstore_api/app/scripts/: __init__.py  db_seeds.py
bookstore_api/app/services/: __init__.py  s3_utils.py
bookstore_api/app/tests/: conftest.py
(+1 files in other folders)
