[tool.poetry]
name = "bookstore_api"
version = "0.1.0"
description = ""
authors = ["Oluwaseun Ilesanmi <seunowonikoko@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.2"
python-dotenv = "^1.2.1"

[tool.poetry.scripts]
start = "bookstore_api:app.run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
